--- a/home.html
+++ b/home.html
@@ -16,6 +16,20 @@
       --text-muted: #6b7280;
       --accent: #ea580c;
       --accent-soft: rgba(234, 88, 12, 0.1);
+      --shadow: rgba(0,0,0,0.1);
+      --hero-gradient: linear-gradient(135deg, #1f2937 0%, #4b5563 100%);
+    }
+
+    [data-theme="dark"] {
+      --bg: #0a0a0b;
+      --card-bg: #141417;
+      --border: #2a2a2e;
+      --text: #e4e4e7;
+      --text-muted: #71717a;
+      --accent: #f97316;
+      --accent-soft: rgba(249, 115, 22, 0.15);
+      --shadow: rgba(0,0,0,0.3);
+      --hero-gradient: linear-gradient(135deg, #fff 0%, #a1a1aa 100%);
     }
 
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -56,7 +70,7 @@
       font-weight: 900;
       letter-spacing: -0.02em;
       margin-bottom: 16px;
-      background: linear-gradient(135deg, #1f2937 0%, #4b5563 100%);
+      background: var(--hero-gradient);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
@@ -133,7 +147,7 @@
     .magazine-card:hover {
       border-color: var(--accent);
       transform: translateY(-4px);
-      box-shadow: 0 20px 40px rgba(0,0,0,0.1);
+      box-shadow: 0 20px 40px var(--shadow);
     }
 
     .magazine-icon {
@@ -206,14 +220,48 @@
       text-decoration: none;
     }
 
+    /* Theme Toggle */
+    .theme-toggle {
+      position: fixed;
+      top: 24px;
+      right: 24px;
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+      border: 1px solid var(--border);
+      background: var(--card-bg);
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.25rem;
+      transition: all 0.3s ease;
+      z-index: 100;
+    }
+
+    .theme-toggle:hover {
+      border-color: var(--accent);
+      transform: scale(1.1);
+    }
+
+    .theme-toggle .icon-sun { display: none; }
+    .theme-toggle .icon-moon { display: block; }
+    [data-theme="dark"] .theme-toggle .icon-sun { display: block; }
+    [data-theme="dark"] .theme-toggle .icon-moon { display: none; }
+
     @media (max-width: 768px) {
       .hero { padding: 80px 0 60px; }
       .hero-features { gap: 16px; }
       .magazines-grid { grid-template-columns: 1fr; }
+      .theme-toggle { top: 16px; right: 16px; width: 40px; height: 40px; }
     }
   </style>
 </head>
 <body>
+  <button class="theme-toggle" onclick="toggleTheme()" title="切換主題">
+    <span class="icon-moon">🌙</span>
+    <span class="icon-sun">☀️</span>
+  </button>
 
   <main class="container">
     <section class="hero">
@@ -300,8 +348,26 @@
   </main>
 
   <footer>
-    <p>Built with Node.js + Fastify + AI | <a href="https://github.com" target="_blank">GitHub</a></p>
+    <p>Built with Node.js + Fastify + AI | <a href="https://github.com/Jeffrey0117/bookiee" target="_blank">GitHub</a></p>
   </footer>
 
+  <script>
+    // 主題切換
+    function toggleTheme() {
+      const html = document.documentElement;
+      const isDark = html.getAttribute('data-theme') === 'dark';
+      html.setAttribute('data-theme', isDark ? 'light' : 'dark');
+      localStorage.setItem('theme', isDark ? 'light' : 'dark');
+    }
+
+    // 載入時檢查偏好
+    (function() {
+      const saved = localStorage.getItem('theme');
+      const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+      if (saved === 'dark' || (!saved && prefersDark)) {
+        document.documentElement.setAttribute('data-theme', 'dark');
+      }
+    })();
+  </script>
 </body>
 </html>
